--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^5.3.1",
-    "husky": "4.x.x",
+    "husky": "^4.3.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
     "lint-staged": "^10.5.4",
