--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "cross-env NODE_ENV=development eslint --cache --fix"
+      "cross-env NODE_ENV=development eslint --fix"
     ],
     "*.json,.{babelrc,eslintrc,prettierrc}": [
       "prettier --ignore-path .eslintignore --parser json --write"
