--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "cross-env NODE_ENV=development eslint --fix"
+      "cross-env NODE_ENV=development eslint --cache --fix"
     ],
     "*.json,.{babelrc,eslintrc,prettierrc}": [
       "prettier --ignore-path .eslintignore --parser json --write"
@@ -235,14 +235,12 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.1",
-    "@mui/styles": "^5.0.1",
-    "@mui/x-data-grid": "^5.0.0-beta.2",
-    "@types/react-virtualized": "^9.21.13",
+    "@types/react-window": "^1.8.5",
+    "antd": "^4.16.13",
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
     "electron-debug": "^3.2.0",
@@ -250,10 +248,12 @@
     "electron-updater": "^4.3.8",
     "history": "4.x.x",
     "node-html-parser": "^4.1.5",
+    "open": "^8.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-virtualized": "^9.22.3",
+    "react-sizeme": "^3.0.2",
+    "react-window": "^1.8.6",
     "regenerator-runtime": "^0.13.5"
   },
   "devEngines": {
