--- a/package.json
+++ b/package.json
@@ -247,6 +247,8 @@
     "electron-log": "^4.3.5",
     "electron-updater": "^4.3.8",
     "history": "4.x.x",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "node-html-parser": "^4.1.5",
     "open": "^8.2.1",
     "react": "^17.0.2",
