--- a/package.json
+++ b/package.json
@@ -252,9 +252,11 @@
     "node-html-parser": "^4.1.5",
     "open": "^8.2.1",
     "react": "^17.0.2",
+    "react-blocks": "^1.1.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-sizeme": "^3.0.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
     "regenerator-runtime": "^0.13.5"
   },
