Update mod config to try and read from Steam Workshop

--- a/package.json
+++ b/package.json
@@ -247,13 +247,17 @@
     "electron-log": "^4.3.5",
     "electron-updater": "^4.3.8",
     "history": "4.x.x",
+    "html-react-parser": "^1.4.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mutex-promise": "^0.1.0",
     "node-html-parser": "^4.1.5",
     "open": "^8.2.1",
+    "ps-list": "^7.2.0",
     "react": "^17.0.2",
     "react-blocks": "^1.1.4",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-sizeme": "^3.0.2",
     "react-virtualized-auto-sizer": "^1.0.6",
