--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Electron: Main",
+      "name": "TTSMM: Main",
       "type": "node",
       "request": "launch",
       "protocol": "inspector",
@@ -11,7 +11,7 @@
       "preLaunchTask": "Start Webpack Dev"
     },
     {
-      "name": "Electron: Renderer",
+      "name": "TTSMM: Renderer",
       "type": "chrome",
       "request": "attach",
       "port": 9223,
@@ -21,8 +21,8 @@
   ],
   "compounds": [
     {
-      "name": "Electron: All",
-      "configurations": ["Electron: Main", "Electron: Renderer"]
+      "name": "TTSMM: All",
+      "configurations": ["TTSMM: Main", "TTSMM: Renderer"]
     }
   ]
 }
