Change certificate dir to be plaftform-agnostic

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
       ],
 			"publish": ["github"],
 			"certificateSubjectName": "FLSoz",
-			"certificateFile": "~/Documents/FLSoz.pfx",
+			"certificateFile": "../../FLSoz.pfx",
 			"publisherName": "FLSoz"
     },
     "linux": {
