--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "terratech-steam-mod-loader",
   "productName": "ttsm",
   "description": "Mod loader for TerraTech that handles Steam Workshop mod configurations",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
     "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
@@ -73,7 +73,8 @@
 			"publish": ["github"],
 			"certificateSubjectName": "FLSoz",
 			"certificateFile": "../../FLSoz.pfx",
-			"publisherName": "FLSoz"
+			"publisherName": "FLSoz",
+			"verifyUpdateCodeSignature": false
     },
     "linux": {
       "target": [
