--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,7 +14,5 @@
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
   "license": "MIT",
-  "dependencies": {
-    "greenworks": "github:greenheartgames/greenworks"
-  }
+  "dependencies": {}
 }
