--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,5 +14,7 @@
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "greenworks": "github:FLSoz/greenworks"
+  }
 }
