--- a/package.json
+++ b/package.json
@@ -258,7 +258,9 @@
     "react-router-dom": "^6.2.1",
     "react-sizeme": "^3.0.2",
     "react-virtualized-auto-sizer": "^1.0.6",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+		"node-forge": ">=1.3.0",
+		"minimist": ">=1.2.6"
   },
   "devEngines": {
     "node": ">=14.x",
