--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "terratech-steam-mod-loader",
   "productName": "ttsm",
   "description": "Mod loader for TerraTech that handles Steam Workshop mod configurations",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
     "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
@@ -237,6 +237,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.1",
     "antd": "^4.17.0",
+    "async-mutex": "^0.3.2",
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
     "dateformat": "^5.0.3",
@@ -248,7 +249,9 @@
     "html-react-parser": "^1.4.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "minimist": ">=1.2.6",
     "mutex-promise": "^0.1.0",
+    "node-forge": ">=1.3.0",
     "node-html-parser": "^4.1.5",
     "open": "^8.2.1",
     "ps-list": "^7.2.0",
@@ -259,9 +262,7 @@
     "react-router-dom": "^6.2.1",
     "react-sizeme": "^3.0.2",
     "react-virtualized-auto-sizer": "^1.0.6",
-    "regenerator-runtime": "^0.13.9",
-		"node-forge": ">=1.3.0",
-		"minimist": ">=1.2.6"
+    "regenerator-runtime": "^0.13.9"
   },
   "devEngines": {
     "node": ">=14.x",
