--- a/package.json
+++ b/package.json
@@ -261,6 +261,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-sizeme": "^3.0.2",
+    "react-sticky": "^6.0.3",
     "react-virtualized-auto-sizer": "^1.0.6",
     "regenerator-runtime": "^0.13.9"
   },
