Fix path validation bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
   "javascript.format.enable": false,
   "typescript.format.enable": false,
 
+	"editor.formatOnSave": true,
+
   "search.exclude": {
     ".git": true,
     ".eslintcache": true,
@@ -19,5 +21,13 @@
     "test/**/__snapshots__": true,
     "package-lock.json": true,
     "*.{css,sass,scss}.d.ts": true
-  }
+	},
+	"prettier.configPath": "",
+	"prettier.useTabs": true,
+	"prettier.singleQuote": true,
+	"prettier.documentSelectors": [
+		"*.js",
+		"*.ts",
+		"*.tsx"
+	]
 }
