--- a/release/app/package.json
+++ b/release/app/package.json
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "greenworks": "github:FLSoz/greenworks"
+    "greenworks": "github:FLSoz/greenworks",
+    "ps-list": "^7.2.0"
   }
 }
