--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "terratech-steam-mod-loader",
-  "productName": "ttsm",
+  "productName": "ttsmm",
   "description": "Mod loader for TerraTech that handles Steam Workshop mod configurations",
-  "version": "1.5.6",
+  "version": "1.6.0",
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
     "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
