Upgrade dependencies, use full app name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terratech-steam-mod-loader",
-  "productName": "TTSMM",
+  "productName": "TerraTech Steam Mod Manager",
   "description": "Mod loader for TerraTech that handles Steam Workshop mod configurations",
   "version": "1.6.0",
   "scripts": {
@@ -187,7 +187,7 @@
     "css-minimizer-webpack-plugin": "^3.3.1",
     "detect-port": "^1.3.0",
 		"ejs": ">=3.1.7",
-    "electron": "^16.0.5",
+    "electron": "^17.0.2",
     "electron-builder": "^23.0.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.1.1",
@@ -206,13 +206,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "follow-redirects": ">=1.14.8",
+		"got": ">=11.8.5",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.4",
     "mini-css-extract-plugin": "^2.4.5",
-		"moment": ">=2.29.2",
+		"moment": ">=2.29.4",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
@@ -248,12 +249,13 @@
     "electron-log": "^4.4.4",
     "electron-updater": "^4.6.5",
     "follow-redirects": ">=1.14.8",
+		"got": ">=11.8.5",
     "history": "^5.2.0",
     "html-react-parser": "^1.4.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "minimist": ">=1.2.6",
-		"moment": ">=2.29.2",
+		"moment": ">=2.29.4",
     "mutex-promise": "^0.1.0",
     "node-forge": ">=1.3.0",
     "node-html-parser": "^4.1.5",
