--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:renderer": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.prod.ts",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
+		"only-publish": "electron-builder build --publish onTagOrDraft",
     "publish-windows": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish onTagOrDraft",
     "publish": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build -mwl --publish onTagOrDraft",
     "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
