--- a/release/app/package.json
+++ b/release/app/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "electron-rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts",
-    "postinstall": "npm run electron-rebuild && npm run link-modules"
+    "postinstall": "npm run electron-rebuild && npm run link-modules",
+		"patch": "npm run patch --no-git-tag-version"
   },
   "license": "MIT",
   "dependencies": {
