--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "only-publish": "electron-builder build --publish onTagOrDraft",
-    "publish": "git fetch && git push && node --eval \"process.stdout.write(require('./package.json').version)\" | git push origin {} && bash bin/publish.sh",
+    "publish": "git fetch && git push origin $(node --eval \"process.stdout.write(require('./package.json').version)\") && git push && bash bin/publish.sh",
     "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
     "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts && opencollective-postinstall",
     "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
