--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "only-publish": "electron-builder build --publish onTagOrDraft",
-    "publish": "git fetch && git push origin $(node --eval \"process.stdout.write(require('./package.json').version)\") && git push && bash bin/publish.sh",
+    "publish": "bash bin/publish.sh",
     "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
     "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts && opencollective-postinstall",
     "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
@@ -209,7 +209,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "follow-redirects": ">=1.14.8",
-    "got": ">=11.8.5",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
@@ -226,6 +225,7 @@
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+	"terser": ">=5.14.2",
     "terser-webpack-plugin": "^5.3.0",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
@@ -252,7 +252,6 @@
     "electron-log": "^4.4.4",
     "electron-updater": "^4.6.5",
     "follow-redirects": ">=1.14.8",
-    "got": ">=11.8.5",
     "history": "^5.2.0",
     "html-react-parser": "^1.4.0",
     "less": "^4.1.1",
