--- a/package.json
+++ b/package.json
@@ -141,11 +141,10 @@
   ],
   "homepage": "https://github.com/FLSoz/terratech-steam-mod-loader#readme",
   "jest": {
-    "testURL": "http://localhost/",
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.erb/mocks/fileMock.js",
-      "\\.(css|less|sass|scss)$": "identity-obj-proxy"
-    },
+    "moduleDirectories": [
+      "node_modules",
+      "release/app/node_modules"
+    ],
     "moduleFileExtensions": [
       "js",
       "jsx",
@@ -153,89 +152,97 @@
       "tsx",
       "json"
     ],
-    "moduleDirectories": [
-      "node_modules",
-      "release/app/node_modules"
-    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.erb/mocks/fileMock.js",
+      "\\.(css|less|sass|scss)$": "identity-obj-proxy"
+    },
     "setupFiles": [
-      "./.erb/scripts/check-build-exists.js"
-    ]
+      "./.erb/scripts/check-build-exists.ts"
+    ],
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    },
+    "testPathIgnorePatterns": [
+      "release/app/dist"
+    ],
+    "transform": {
+      "\\.(ts|tsx|js|jsx)$": "ts-jest"
+    }
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@types/dateformat": "^5.0.0",
     "@types/history": "4.7.9",
-    "@types/jest": "^27.0.3",
-    "@types/node": "17.0.5",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/jest": "^27.5.1",
+    "@types/node": "17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "async": ">=2.6.4",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
-    "concurrently": "^6.5.1",
-    "core-js": "^3.20.1",
+    "concurrently": "^7.1.0",
+    "core-js": "^3.22.5",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.3.1",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "detect-port": "^1.3.0",
-    "ejs": ">=3.1.7",
-    "electron": "^17.0.2",
-    "electron-builder": "^23.0.0",
+		"electron": "^18.2.3",
+    "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
-    "electron-notarize": "^1.1.1",
-    "electron-rebuild": "^3.2.5",
-    "eslint": "^8.5.0",
+    "electron-notarize": "^1.2.1",
+    "electron-rebuild": "^3.2.7",
+    "electronmon": "^2.0.2",
+    "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-erb": "^4.0.3",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-compat": "^4.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.2",
+    "eslint-plugin-compat": "^4.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "file-loader": "^6.2.0",
-    "follow-redirects": ">=1.14.8",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "lint-staged": "^12.1.4",
-    "mini-css-extract-plugin": "^2.4.5",
-    "moment": ">=2.29.4",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "lint-staged": "^12.4.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "opencollective-postinstall": "^2.0.3",
-    "prettier": "^2.5.1",
-    "react-refresh": "^0.11.0",
+    "prettier": "^2.6.2",
+    "react-refresh": "^0.13.0",
     "react-refresh-typescript": "^2.0.3",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.1.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.45.1",
-    "sass-loader": "^12.4.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-	"terser": ">=5.14.2",
-    "terser-webpack-plugin": "^5.3.0",
-    "ts-jest": "^27.1.2",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
+		"terser": ">=5.14.2",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-jest": "^28.0.2",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.65.0",
+    "webpack": "^5.72.1",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
@@ -248,35 +255,31 @@
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
     "dateformat": "^5.0.3",
-    "electron-debug": "^3.2.0",
-    "electron-log": "^4.4.4",
-    "electron-updater": "^4.6.5",
-    "follow-redirects": ">=1.14.8",
+		"electron-debug": "^3.2.0",
+    "electron-log": "^4.4.7",
+    "electron-updater": "^5.0.3",
     "history": "^5.2.0",
     "html-react-parser": "^1.4.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "minimist": ">=1.2.6",
-    "moment": ">=2.29.4",
     "mutex-promise": "^0.1.0",
     "node-forge": ">=1.3.0",
     "node-html-parser": "^4.1.5",
     "open": "^8.2.1",
     "ps-list": "^7.2.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-blocks": "^1.1.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.3.0",
     "react-sizeme": "^3.0.2",
     "react-sticky": "^6.0.3",
-    "react-virtualized-auto-sizer": "^1.0.6",
     "regenerator-runtime": "^0.13.9"
   },
   "devEngines": {
     "node": ">=14.x",
-    "npm": ">=7.x",
-    "yarn": ">=1.21.3"
+    "npm": ">=7.x"
   },
   "browserslist": [],
   "prettier": {
