--- a/.eslintignore
+++ b/.eslintignore
@@ -18,8 +18,8 @@ node_modules
 # OSX
 .DS_Store
 
-build/app/dist
-build/release
+release/app/dist
+release/build
 .erb/dll
 
 .idea
@@ -27,3 +27,7 @@ npm-debug.log.*
 *.css.d.ts
 *.sass.d.ts
 *.scss.d.ts
+
+# eslint ignores hidden directories by default:
+# https://github.com/eslint/eslint/issues/8429
+!.erb
